# chibi-world

./: Cargo.toml  README.md
src/: game.rs  lib.rs  main.rs
www/: bootstrap.js  index.html  index.js  vite.config.ts
