[package]
name = "chibi-world"
version = "0.1.0"
authors = ["Alexander Ortiz <alexanderortiz@xxxxxx.com>"]
edition = "2024"
description = "Mini game project"
repository = "https://github.com/alexortiz201/chibi-world"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-pack = "0.13.1"
bracket-lib = "~0.8"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
