[package]
name = "chibi-world"
version = "0.1.0"
edition = "2024"
resolver = "2"
description = "Mini game project"
repository = "https://github.com/alexortiz201/chibi-world"

[lib]
name = "chibi_world"  # ✅ Ensure it matches package name
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "chibi-world"
path = "src/game.rs"  # Binary for CLI (cargo run)

[dependencies]
wasm-bindgen = "0.2.100"
rltk = { git = "https://github.com/amethyst/bracket-lib" }
getrandom = { version = "0.2.15", features = ["js"] }

console_error_panic_hook = { version = "0.1.7", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
errno = "0.3"
bzip2-sys = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = "s"